src/scss/08_archive.scss
////////////////////////////////////////////////////////////////////// ARCHIVE 
.archive {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: $color-background;
  font-weight: 300;
  display: flex;
  visibility: hidden;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  overflow: auto;
  padding-top: 5rem;
  transform: translateY(-100%);
  transition: transform 0.3s ease-in, visibility 0s 0.3s;

  &--visible {
    visibility: visible;
    transform: translateY(0);
    transition: transform 0.3s ease-out, visibility 0s;
  }

  &__buttons {
    @include flex-center;
    width: 100%;
    padding: $layout-xs-sm-padding;
    justify-content: space-between;
  }

  &__button {
    padding: 0.6rem 1rem;
    border-radius: 4px;
    color: #fff;
    font-size: 1rem;
    transition: background-color $time-hover-effect;

    &:hover {
      background-color: $color-water;
    }
  }

  &__weeks {
    width: 100%;
    padding: $layout-xs-sm-padding;
  }
}
///////////////////////////////////////////////////////////////////////// WEEK 
.week {
  width: 100%;

  &__empty {
    display: none;
    text-align: center;
    margin: 0;

    &--visible {
      display: block;
    }
  }

  &__heading {
    margin: 0;
    background-color: $color-water;
    text-align: center;
    border-radius: 5px;
    padding: 5px;
    margin: 5px 0;
  }

  &__list {
    display: flex;
    flex-direction: column-reverse;
    list-style-type: none;
    padding: 0;
    margin: 0;
  }
}
//////////////////////////////////////////////////////////////////////// ENTRY 
.entry {
  display: grid;
  grid-template-columns: 1fr repeat(3, auto);
  grid-gap: 5px;
  align-items: center;
  padding: 5px;
  position: relative;

  &--last {
    grid-template-columns: 1fr repeat(4, auto);
  }

  &--edit-mode {
    background-color: $color-dark-background;
  }

  &:not(:first-child) {
    border-bottom: 1px solid $color-grey;
  }
  
  &__button {
    margin: 0;
    padding: 0.6rem 0.8rem;
    color: #fff;
    border-radius: 5px;
    
    &:hover {
      background-color: $color-water;
    }
  }
  
  &__add {
    @include flex-center;
    padding: 10px;
  }

  &.entry__add { // overriding higher specificity selectors
    border: none;
  }

  &__remove {
    @include flex-center;
    width: $size-xs-archive-buttons;
    height: $size-xs-archive-buttons;
    overflow: hidden;
    padding: 0;
    fill: #fff;
    transition: width $time-edit-buttons;

    &--hidden {
      width: 0;
    }
    
    &:hover {
      fill: $color-low;
    }
  }

  &__svg {
    width: 100%;
    height: 100%;
    pointer-events: none;
  }
  
  &__header {
  
    &--edit-mode {
      color: #aaa;
    }
  }
  
  &__heading {
    text-align: left;
    margin: 0;
  
    &--day {
      font-weight: bold;
      text-transform: capitalize;
    }
  
    &--date {
      font-size: 0.85rem;
      margin-top: 3px;
    }
  }
  
  &__value {
    @include flex-center;
    margin: 0;
    font-weight: bold;
    width: $size-xs-archive-buttons;
    height: $size-xs-archive-buttons;
    border: 2px solid #fff;
    border-radius: 50%;
  
    @media only screen and (min-width: $media-sm) {
      width: $size-sm-archive-buttons;
      height: $size-sm-archive-buttons;
    }
  }
}
///////////////////////////////////////////////////////////////// EDITION MODE 
.edition {
  position: relative;
  display: grid;
  grid-template-columns: repeat($edit-group-cols, 1fr);
  column-gap: $edit-group-col-gap;
  overflow: hidden;
  width: $size-xs-archive-buttons;
  transition: width $time-edit-buttons;

  &--visible {
    $icons-width: $edit-group-cols * $size-xs-archive-buttons;
    $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
    width: $icons-width + $gaps-width;
  }

  &__button {
    @include flex-center;
    padding: 0;
    width: $size-xs-archive-buttons;
    height: $size-xs-archive-buttons;
    opacity: 0;
    visibility: hidden;
    transition: opacity $time-edit-buttons, visibility 0s $time-edit-buttons;

    &--visible {
      visibility: visible;
      opacity: 1;
      transition: opacity $time-edit-buttons, visibility 0s;
    }

    &--edit {
      position: absolute;
    }
  }

  &__svg {
    width: 100%;
    height: 100%;
    fill: #fff;
    pointer-events: none;
  }

  @media only screen and (min-width: $media-sm) {

    & {
      width: $size-sm-archive-buttons;

      &--visible {
        $icons-width: $edit-group-cols * $size-sm-archive-buttons;
        $gaps-width: ($edit-group-cols - 1) * $edit-group-col-gap;
        width: $icons-width + $gaps-width;
      }

      &__button {
        width: $size-sm-archive-buttons;
        height: $size-sm-archive-buttons;
      }
    }
  }
}
/////////////////////////////////////////////////////////////////// INDICATORS 
.indicator {
  @include flex-center;
  position: relative;
  width: $size-xs-archive-buttons;
  height: $size-xs-archive-buttons;
  overflow: hidden;

  @media only screen and (min-width: $media-sm) {
    width: $size-sm-archive-buttons;
    height: $size-sm-archive-buttons;
  }

  &__svg {
    @include flex-center;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    height: 100%;
    width: 100%;
    fill: $color-emoticon-low;
    opacity: 0;
    visibility: hidden;
    transform: translateX(100%);
    transition: opacity $time-edit-mode, transform $time-edit-mode;
    

    @for $i from 1 to 9 {
      &--emo-#{$i} {
        $reverse: 9-$i;
        $red: 27*$reverse;
        $green: 25*$i;
        fill: rgb(10+$red, 40+$green, 20);
      }
    }

    &--visible {
      opacity: 1;
      visibility: visible;
      transform: translateX(0);
    }
  }
}
//////////////////////////////////////////////////////////////////// NEW ENTRY 
.new-entry {
  @include flex-center;
  visibility: hidden;
  grid-auto-rows: 100px;
  background-color: rgba($color: #000, $alpha: 0.5);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;

  &--visible {
    visibility: visible;
  }

  &__container {
    display: grid;
    grid-template-columns: repeat(2, $size-xs-archive-add-new);
    grid-auto-rows: $size-xs-archive-add-new;
    grid-gap: 1rem;
  }

  &__value {
    @include flex-center;
    font-size: 6rem;
    font-weight: bold;
    margin: 0;
    border: 6px solid #fff;
    border-radius: 50%;
    width: 100%;
    height: 100%;
    grid-column: 1/3;
    grid-row: 1/3;
  }

  &__button {
    @include flex-center;
    padding: 2px;
    width: 100%;
    height: 100%;
    fill: #aaa;
    border-radius: 50%;
    overflow: hidden;

    &:hover {
      fill: #fff;
    }
  }

  &__svg {
    width: 100%;
    height: 100%;
    pointer-events: none;
  }
}

